Bug 164568 - Crash when opening a linearized PDF
Summary: Crash when opening a linearized PDF
Status: RESOLVED FIXED
Alias: None
Product: kpdf
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Albert Astals Cid
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-20 23:18 UTC by Tom Crawford
Modified: 2008-06-21 16:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
remsen_crawford_pandora_1888_associate_editor_029.pdf (132.11 KB, application/pdf)
2008-06-21 04:55 UTC, Tom Crawford
Details
tr_crawford_class_secretary_1889_uga_008.pdf (176.12 KB, application/pdf)
2008-06-21 04:55 UTC, Tom Crawford
Details
remsen_crawford_appointed_press_agent_new_york_times_jan_10_1896_106846841.pdf (52.90 KB, application/pdf)
2008-06-21 04:55 UTC, Tom Crawford
Details
remsen_crawford_new_york_times_article_nov_16_1919_112644696.pdf (217.42 KB, application/pdf)
2008-06-21 04:55 UTC, Tom Crawford
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Crawford 2008-06-20 23:18:19 UTC
Version:            (using KDE 3.5.9)
Installed from:    SuSE RPMs

When I try to open linearized PDF files with Acrobat Reader 8, the linearized PDF files open and are readable,  I am running the software on SuSE 10.1 OS,
Comment 1 Christophe Marin 2008-06-20 23:23:23 UTC
[Thread debugging using libthread_db enabled] 
[New Thread 47156244820096 (LWP 18332)] [
New Thread 1098918208 (LWP 18908)] 0x00002ae368f600e8 in __lll_mutex_lock_wait () from /lib64/libc.so.6 
#0 0x00002ae368f600e8 in __lll_mutex_lock_wait () from /lib64/libc.so.6 
#1 0x000000000098ded0 in ?? () 
#2 0x2e2e2e676e696c62 in ?? () 
#3 0x00002ae368f0588f in malloc_stats () from /lib64/libc.so.6 
#4 0x00007fff4357c138 in ?? () 
#5 0x00002ae368329cee in QApplication::sendPostedEvents () from /usr/lib/qt3/lib64/libqt-mt.so.3 
#6 0x0000000000000000 in ?? () 
Comment 2 Albert Astals Cid 2008-06-21 00:04:19 UTC
And the PDF?
Comment 3 Tom Crawford 2008-06-21 04:55:51 UTC
Albert,

Attached are two linearized pdfs which open correctly with Acrobat 8, open
as only a white page in KPDF, and cause Konqueror to crash when I click on
their file names (remsen_crawford_pandora . . . and tr_crawford_class . . .
.

Also attached are two files which are not linearized and which open properly
by using Acrobat 8, KPDF, and by clicking on their file names in Konqueror.
They are remsen_crawford appointed . . . and remsen_crawford_new_york . . .
.

When I examined the properties of the files using Acrobat Reader 8, it
appeared to me that the key difference between the two groups of files is
the 
Comment 4 Albert Astals Cid 2008-06-21 16:35:22 UTC
SVN commit 822788 by aacid:

somehow i forgot to commit this part of http://cgit.freedesktop.org/poppler/poppler/commit/?id=2a12409ebbf96ea3ca4556b71231a45ae37cb052

Sorry :-(

BUG: 164568



 M  +4 -3      JBIG2Stream.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=822788