somehow i forgot to commit this part of http://cgit.freedesktop.org/poppler/poppler/commit/?id=2a12409ebbf96ea3ca4556b71231a45ae37cb052

Sorry :-(

BUG: 164568


svn path=/branches/KDE/3.5/kdegraphics/kpdf/; revision=822788